--- a/visual_translations/static/visual_translations/css/visual-translations.css
+++ b/visual_translations/static/visual_translations/css/visual-translations.css
@@ -1,15 +1,15 @@
 /* place for some custom CSS */
 html {
-    font-family: Verdana, sans-serif;
+    font-family: Verdana, sans-serif !important;
 }
 
 #help-screen {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     z-index: 100;
 
     color: white;
