Update project name in templates.

--- a/wiki_feed/templates/wiki_feed/accepted.html
+++ b/wiki_feed/templates/wiki_feed/accepted.html
@@ -33,6 +33,6 @@
 {% endblock %}
 
 {% block body %}
-    <p>{% trans "Wiki News is being generated. Please wait." %}</p>
+    <p>{% trans "Wiki Feed is being generated. Please wait." %}</p>
     <p id="wait-text">...</p>
 {% endblock %}
