--- a/wiki_feed/templates/wiki_feed/index.html
+++ b/wiki_feed/templates/wiki_feed/index.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block header %}
-    <p>{% trans "Wiki News is a research with the aim to generate a news listing based on Wikipedia data." %}</p>
+    <p>{% trans "Wiki Feed is a research with the aim to create a collaborative feed system." %}</p>
 {% endblock %}
