--- a/wiki_feed/templates/wiki_feed/no-content.html
+++ b/wiki_feed/templates/wiki_feed/no-content.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block body %}
-    <p>{% trans "No news found" %}</p>
+    <p>{% trans "No feed content found" %}</p>
 {% endblock %}
