Continue from wait page to source page when errors occur.

--- a/wiki_feed/templates/wiki_feed/wait.html
+++ b/wiki_feed/templates/wiki_feed/wait.html
@@ -21,6 +21,9 @@
                 } else {
                     window.location = "{{ continue_path | escapejs }}" + uri.search();
                 }
+            })
+            .fail(function() {
+                window.location = "{{ continue_path | escapejs }}" + uri.search();
             });
 
         });
