Specifies the commons image for results and uses that in HTML view.

--- a/wiki_feed/templates/wiki_feed/ok.html
+++ b/wiki_feed/templates/wiki_feed/ok.html
@@ -15,7 +15,7 @@
             </div>
             <div class="row">
                 <div class="col-md-10">{{ page.wikidata.description }}</div>
-                <div class="col-md-2"><img src=""/></div>
+                <div class="col-md-2"><img src="{{ page.commons_image }}" style="width: 100%"/></div>
             </div>
             <div class="row">
                 <ul>
