--- a/wiki_feed/templates/wiki_feed/ok.html
+++ b/wiki_feed/templates/wiki_feed/ok.html
@@ -21,7 +21,7 @@
                 <ul>
                     {% for module, rank_info in page.ds_rank.items %}
                         {% if module != "rank" %}
-                            <li>Score by "{{ module }}" module = {{ rank_info.value }} * {{ rank_info.weight }} = {{ rank_info.rank }}</li>
+                            <li>Score by "{{ module }}" filter = {{ rank_info.value }} * {{ rank_info.weight }} = {{ rank_info.rank }}</li>
                         {% endif %}
                     {% endfor %}
                     <li>Total score: {{ page.ds_rank.rank }}</li>
